--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -18,4 +18,10 @@
         @content;
     }
 }
- 
+
+@mixin posCenter {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
