--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -27,6 +27,7 @@ body {
 .header {
     text-align: center;
     padding: 50px;
+    margin-bottom: 45px;
     // margin: 45px 0;
     text-transform: uppercase;
     position: relative;
@@ -58,5 +59,128 @@ body {
     }
     &__subtitle {
         @include text($gray, $text-font, 1.8rem, 500, 1.1);
+    }
+}
+// profile ------------------------------------------------------------------------
+
+.profile {
+    min-height: 500px;
+    display: flex;
+    @media screen and (max-width: 1024px) {
+        flex-direction: column;
+    }
+    &__side {
+        width: 50%;
+        padding: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        &:first-child {
+            border-right: 1px solid $brand-color;
+        }
+        @media screen and (max-width: 1024px) {
+            padding: 40px 60px;
+            width: 100%;
+            &:first-child {
+                border: none;
+            }
+        }
+    }
+    &__img {
+        border: 1px solid $brand-color;
+        position: relative;
+        z-index: 1;
+        @media screen and (max-width: 1024px) {
+            max-width: 200px;
+        }
+    }
+    &__imgwrap {
+        border: 1px solid $brand-color;
+        font-size: 0;
+        padding: 10px;
+        position: relative;
+        &:before,
+        &:after {
+            content: '';
+            display: inline-block;
+            width: 102%;
+            height: 60%;
+            background-color: #fff;
+            @include posCenter;
+            z-index: 0;
+        }
+        &:after {
+            background-color: #fff;
+            width: 60%;
+            height: 102%;
+        }
+        
+    }
+    &__name {
+        @include text($text-color, $title-font, 3.6rem, 900, 1.1);
+        margin: .5em 0;
+        &:after {
+            content: '';
+            display: block;
+            width: 50%;
+            border-bottom: 1px solid $brand-color;
+            margin: 0 auto;
+            padding: 10px;
+        }
+    }
+    &__office {
+        @include text($text-color, $text-font, 2.4rem, 400, 1.1);
+        margin: 3em 0;
+    }
+    &__link {
+        display: inline-block;
+        color: $text-color;
+        text-transform: uppercase;
+        text-decoration: none;
+        font-size: 1.4rem;
+        border: 1px solid $brand-color;
+        padding: .3em .5em;
+        @include text($text-color, $btn-font, 1.4rem, 700, 1.1);
+        @include hover {
+            background-color: $brand-color;
+            color: #fff;
+        }
+    }
+
+    &__text {
+        margin-bottom: 2em;
+        &:after {
+            content: '';
+            display: inline-block;
+            width: 50px;
+            height: 4px;
+            background-image: linear-gradient(to right, $brand-color 0%, $brand-color 20%, transparent 20%,transparent 35%, $brand-color 35%, $brand-color 65%, transparent 65%, transparent 80%, $brand-color 80%);
+        }
+    }
+}
+
+.social {
+    padding: 0;
+    &__item {
+        display: inline-block;
+        margin: 3px;
+    }
+    &__link {
+        color: $gray;
+        font-size: 1.2em;
+        display: inline-block;
+        width: 36px;
+        height: 36px;
+        border-radius: 50%;
+        border: 2px solid $gray;
+        padding: 3px;
+        opacity: 0.6;
+        line-height: 26px;
+        @include hover {
+            opacity: 1;
+        }
+
     }
 }
